# gwgan_edgerefine

./: Cargo.toml  README.md  build_local.py
SteRefine/src/: config.py  main.py  models.py  predownload.py  train.py
graph_refiner/: Cargo.toml  pyproject.toml
graph_refiner/src/: engine.rs  graph.rs  lib.rs  operations.rs  stats.rs
graph_refiner/tests/: test_ga.rs
gwgan_edgerefine/: ga_adapter.py
rust_ga_lib/: Cargo.toml  pyproject.toml
rust_ga_lib/src/: lib.rs
src/: config.py  main.py  models.py  train.py  utils.py
stacked_refine/dataset_verification/: verified_stats.json
stacked_refine/results/: allgraphs.py  allgraphs2.py
stacked_refine/results/ENZYMES/20260122_101821_Seed42/: ENZYMES_raw_results.txt  ENZYMES_refined_results.txt  parameters.txt  raw_graphs.json  raw_stats.json  real_graphs.json  real_stats.json  refined_graphs.json  refined_stats.json  summary_report.txt  training_log.txt
stacked_refine/results/MUTAG/20260122_080820_Seed42/: MUTAG_raw_results.txt  MUTAG_refined_results.txt  parameters.txt  raw_graphs.json  raw_stats.json  real_graphs.json  real_stats.json  refined_graphs.json  refined_stats.json  summary_report.txt  training_log.txt
stacked_refine/results/PROTEINS/20260121_133218_Seed42/: PROTEINS_raw_results.txt  PROTEINS_refined_results.txt  parameters.txt  raw_graphs.json  raw_stats.json  real_graphs.json  real_stats.json  refined_graphs.json  refined_stats.json  summary_report.txt  training_log.txt
stacked_refine/src/: config.py  plotting1.py  stmain.py  stmain2.py  train.py  utils.py  verify.py
(+12 files in other folders)
