[package]
name = "gwgan_edgerefine_rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "gwgan_edgerefine_rs"
crate-type = ["cdylib"]

[dependencies]
# Updated to latest stable versions compatible with Python
pyo3 = { version = "0.23.3", features = ["extension-module"] }
numpy = "0.23.0" 
rand = "0.8.5"
rayon = "1.8.0"
