[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "gwgan-edgerefine-rs"
version = "0.1.0"
description = "High-performance Evolutionary Algorithm extension for GWGAN Edge Refinement"
authors = [
    {name = "Your Name", email = "your.email@university.edu"},
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21",
]

[tool.maturin]
features = ["pyo3/extension-module"]